서블릿과 DB 연결.최종적으로 ConnectionPool 이용. my_db가져와서 테이블 두개 받아와 멤버 추가했을때 DB에 저장되는 것 까지!

--- a/TodoList/src/main/webapp/todo.html
+++ b/TodoList/src/main/webapp/todo.html
@@ -38,7 +38,7 @@
 	<form action="todo" method = "get" name ="todo" class="container">
 		<p id = "Ptodo">My ToDo List</p>
 		<hr/>
-		<input type="text" name="user_content" id="input1">
+		<input type="text" name="user_content" id="input1">d
 		<input type="button" value="Ãß°¡"id="btn" onclick="add()"/>
 		<hr/>
 		<ul id="list"></ul>
